--- a/web/templates/app.html
+++ b/web/templates/app.html
@@ -41,6 +41,7 @@
                         -->
 
                         <li><a href="#user">Użytkownik</a></li>
+                        <li><a href="#grades">Oceny</a></li>
                         <li><a href="#courses">Przedmioty</a></li>
                         <li><a href="#lecturers">Nauczyciele</a></li>
                         <li><a href="#terms">Cykle</a></li>
@@ -68,6 +69,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-left">
                 <li><a href="#user">Użytkownik</a></li>
+                <li><a href="#grades">Oceny</a></li>
                 <li><a href="#courses">Przedmioty</a></li>
                 <li><a href="#lecturers">Nauczyciele</a></li>
                 <li><a href="#terms">Cykle</a></li>
