https://github.com/kujonmobi/kujon-server/issues/219

--- a/web/static/templates/tt.html
+++ b/web/static/templates/tt.html
@@ -1,1 +1,13 @@
-<div id='calendar'></div>
+<section id="plan-zajec">
+    <div class="container">
+        <div class="row">
+            <!--<div class="col-sm-12 naglowek-h2">
+                <h2>Plan zajęć</h2>
+            </div>-->
+            <div class="col-sm-12">
+                <div id="calendar"></div>
+            </div>
+
+        </div>
+    </div>
+</section>
