--- a/web/templates/app.html
+++ b/web/templates/app.html
@@ -2,6 +2,8 @@
 
 {% block header_js %}
 
+<link href="/static/bower_components/bootstrap-table/dist/bootstrap-table.min.css" rel="stylesheet">
+
 <script type="text/javascript" src="/static/require.config.js"></script>
 <script type="text/javascript" data-main="/static/js/startup.js"
         src="/static/bower_components/requirejs/require.js"></script>
@@ -42,6 +44,7 @@
 
                         <li><a href="#user">Użytkownik</a></li>
                         <li><a href="#grades">Oceny</a></li>
+                        <li><a href="#tt">Plan</a></li>
                         <li><a href="#courses">Przedmioty</a></li>
                         <li><a href="#lecturers">Nauczyciele</a></li>
                         <li><a href="#terms">Cykle</a></li>
@@ -70,6 +73,7 @@
             <ul class="nav navbar-nav navbar-left">
                 <li><a href="#user">Użytkownik</a></li>
                 <li><a href="#grades">Oceny</a></li>
+                <li><a href="#tt">Plan</a></li>
                 <li><a href="#courses">Przedmioty</a></li>
                 <li><a href="#lecturers">Nauczyciele</a></li>
                 <li><a href="#terms">Cykle</a></li>
