--- a/web/templates/app.html
+++ b/web/templates/app.html
@@ -3,6 +3,7 @@
 {% block header_js %}
 
 <link href="/static/bower_components/bootstrap-table/dist/bootstrap-table.min.css" rel="stylesheet">
+<link href="/static/bower_components/jquery-nice-select/css/nice-select.css" rel="stylesheet">
 
 <script type="text/javascript" src="/static/require.config.js"></script>
 <script type="text/javascript" data-main="/static/js/startup.js"
