web error handling

--- a/web/static/templates/error.html
+++ b/web/static/templates/error.html
@@ -1,7 +1,9 @@
-<div class="panel panel-default">
-    <div class="panel-body">
-        <div class="alert alert-warning fade in" role="alert">
-            <strong>Upss! </strong>{{message}}
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12 naglowek-h2">
+            <div class="alert alert-warning fade in" role="alert">
+                <strong>Upss! </strong>{{message}}
+            </div>
         </div>
     </div>
 </div>
