--- a/web/templates/register.html
+++ b/web/templates/register.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block header %}
+{% block main %}
 <section id="usos">
     <div class="container">
         <div class="row">
