fix archive user button

--- a/web/static/templates/user.html
+++ b/web/static/templates/user.html
@@ -137,9 +137,8 @@
                                            placeholder="Wpisz adres email">
                                 </div>
                                 <div class="col-sm-5 col-xs-12">
-                                    <button href={{API_URL}}/authentication/archive"
-                                            class="btn btn-default btn-usun col-xs-12" type="submit">Usuń konto
-                                    </button>
+                                    <a class="btn btn-default" href="{{API_URL}}/authentication/archive" role="button">Usuń
+                                        konto</a>
                                 </div>
                             </div>
                         </div>
